syntax = "proto3";

package kepler.epochs;

option go_package = "github.com/dittonetwork/kepler/x/epochs/types";

// EventEpochEnd is an event that is emitted when an epoch ends.
message EventEpochEnd {
  int64 epoch_number = 1;
}

// EventEpochStart is an event that is emitted when an epoch starts.
message EventEpochStart {
  int64 epoch_number = 1;
  int64 epoch_start_time = 2;
}
